tests/errors/arena_add_nonref.ptt
use std/arena

touch(a Arena of int) {
  a.add(1)
}

spark {
  a is Arena of int
  touch(a)
}
